--- a/Weatherapp/package.json
+++ b/Weatherapp/package.json
@@ -1,16 +1,18 @@
 {
+  "name": "weatherapp",
+  "version": "1.0.0",
+  "description": "Part 1 - Real Time Weather App",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "axios": "^1.7.8",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2"
-  },
-  "name": "weatherapp",
-  "version": "1.0.0",
-  "description": "Part 1 \r Real Time Weather App",
-  "main": "script.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
